flaskapp.istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-service
  labels: 
    app: flaskapp-service-label
spec: 
  selector: 
    app: flaskapp-app
  ports: 
    - name: http
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-v1 
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp-app
      version: v1
  template:
    metadata:
      labels:
        app: flaskapp-app
        version: v1
    spec: 
      containers:
      - name: flaskapp
        image: dustise/flaskapp
        imagePullPolicy: IfNotPresent
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-v2
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp-app
      version: v2
  template:
    metadata:
      labels:
        app: flaskapp-app
        version: v2
    spec: 
      containers:
      - name: flaskapp
        image: dustise/flaskapp
        imagePullPolicy: IfNotPresent
