sleep.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels: 
    app: sleep
spec: 
  selector: 
    app: sleep
  ports: 
    - name: ssh
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec: 
      containers:
      - name: sleep
        image: dustise/sleep
        imagePullPolicy: IfNotPresent
