flaskapp-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flaskapp-default-v2
spec: 
  hosts:
  - flaskapp-service
  http:
  - route: 
    - destination: 
        host: flaskapp-service
        subset: v2
